# CTA_LED_Map_project

./: .gitignore  README.md  create_schema_and_tables.sql  first_raw_joins.sql  initial_exploration.ipynb  main.py  notes_on_electronics.md  post_dbt_joins.sql  pyproject.toml  schematics.txt
cta_dbt/: dbt_project.yml
cta_dbt/models/: sources.yml
cta_dbt/models/dim/: dim_directions.sql  dim_stops.sql  schema.yml
cta_dbt/models/fct/: fct_lapi_data.sql  schema.yml
cta_dbt/models/staging/: schema.yml  stg_directions.sql  stg_lapi.sql  stg_stops.sql
sql/: create_schema_and_tables.sql
